src/app.css
@import "tailwindcss";
@import "tw-animate-css";

/* @plugin "@tailwindcss/typography"; */
/* @custom-variant dark (&:is(.dark *)); */

:root {
  --scrollbar-width: 15px;
  --header-height: 100px;

  --sans: 'Inter', ui-sans-serif, system-ui, sans-serif;
  --serif: 'Instrument', "Noto Serif", ui-sans-serif, serif;
  --cursive: 'Luxurious', --serif, serif;
  --multi-lingual-serif: "Noto Serif", ui-serif, serif;
  --multi-lingual-sans: "Inter", ui-sans-serif, sans-serif;
  --multi-lingual-cursive: var(--cursive), var(--multi-lingual-serif);

  --radius: 30px;

  /* Default background color of <body />...etc / */
  --background: oklch(96.89% 0.0215 95.28);
  --foreground: oklch(0.26 0.1184 279.72);

  /* Background color for <Card /> */
  --card: oklch(34.93% 0.147 281.02);
  --card-foreground: oklch(96.89% 0.0215 95.28);

  /* Background color for popovers such as <DropdownMenu />, <HoverCard />, <Popover /> */
  --popover: oklch(34.93% 0.147 281.02);
  --popover-foreground: oklch(96.89% 0.0215 95.28);

  /* Primary colors for <Button /> */
  --primary: oklch(0.26 0.1184 279.72);
  --primary-foreground: oklch(96.89% 0.0215 95.28);

  /* Secondary colors for <Button /> */
  --secondary: oklch(96.89% 0.0215 95.28);
  --secondary-foreground: oklch(34.93% 0.147 281.02);

  /* Muted backgrounds such as <TabsList />, <Skeleton /> and <Switch /> */
  --muted: oklch(97% 0.0068 247.9);
  --muted-foreground: oklch(55% 0.0407 257.44);

  /* Used for accents such as hover effects on <DropdownMenuItem>, <SelectItem>...etc */
  --accent: oklch(0.9 0.02 95.28);
  --accent-foreground: oklch(21% 0.0399 265.73);

  /* Used for destructive actions such as <Button variant='destructive'> */
  --destructive: oklch(0.444 0.177 26.899);
  --destructive-foreground: oklch(94.26% 0.0173 26.899);

  /* Default border color */
  --border: oklch(34.93% 0.147 281.02);

  /* Border color for inputs such as <Input />, <Select />, <Textarea /> */
  --input: oklch(0.8268 0.0538 279.72);

  /* Used for focus ring */
  --ring: oklch(34.93% 0.147 281.02);

  /* Chart Colors */
  --chart-1: oklch(0.646 0.222 41.116);
  --chart-2: oklch(0.6 0.118 184.704);
  --chart-3: oklch(0.398 0.07 227.392);
  --chart-4: oklch(0.828 0.189 84.429);
  --chart-5: oklch(0.769 0.188 70.08);

  /* Sidebar Colors */
  --sidebar: oklch(0.985 0 0);
  --sidebar-foreground: oklch(0.141 0.005 285.823);
  --sidebar-primary: oklch(0.21 0.006 285.885);
  --sidebar-primary-foreground: oklch(0.985 0 0);
  --sidebar-accent: oklch(0.967 0.001 286.375);
  --sidebar-accent-foreground: oklch(0.21 0.006 285.885);
  --sidebar-border: oklch(0.92 0.004 286.32);
  --sidebar-ring: oklch(0.705 0.015 286.067);
}

@theme inline {

  --font-sans: var(--sans);
  --font-serif: var(--serif);
  --font-cursive: var(--cursive);

  --radius-xxs: calc(var(--radius)/5);
  --radius-xs: calc(var(--radius)/4);
  --radius-sm: calc(var(--radius)/3);
  --radius-md: calc(var(--radius)/2);
  --radius-theme: var(--radius);
  --radius-lg: calc(var(--radius)*1.5);
  --radius-xl: calc(var(--radius)*2);

  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --color-card: var(--card);
  --color-card-foreground: var(--card-foreground);
  --color-popover: var(--popover);
  --color-popover-foreground: var(--popover-foreground);
  --color-primary: var(--primary);
  --color-primary-foreground: var(--primary-foreground);
  --color-secondary: var(--secondary);
  --color-secondary-foreground: var(--secondary-foreground);
  --color-muted: var(--muted);
  --color-muted-foreground: var(--muted-foreground);
  --color-accent: var(--accent);
  --color-accent-foreground: var(--accent-foreground);
  --color-destructive: var(--destructive);
  --color-destructive-foreground: var(--destructive-foreground);
  --color-border: var(--border);
  --color-input: var(--input);
  --color-ring: var(--ring);
  --color-chart-1: var(--chart-1);
  --color-chart-2: var(--chart-2);
  --color-chart-3: var(--chart-3);
  --color-chart-4: var(--chart-4);
  --color-chart-5: var(--chart-5);
  --color-sidebar: var(--sidebar);
  --color-sidebar-foreground: var(--sidebar-foreground);
  --color-sidebar-primary: var(--sidebar-primary);
  --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
  --color-sidebar-accent: var(--sidebar-accent);
  --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
  --color-sidebar-border: var(--sidebar-border);
  --color-sidebar-ring: var(--sidebar-ring);
}

@layer base {
  * {
    @apply border-border outline-ring/50;
  }

  body {
    @apply bg-background text-foreground;
  }
}

li::marker {
  color: var(--list-marker-color, var(--foreground, black));
}

.list-bullet {
  list-style-type: disc;
  list-style-position: outside;
}


@font-face {
  font-display: swap;
  font-family: 'Inter';
  font-style: normal;
  src: url('/fonts/Inter/Inter-VariableFont_opsz,wght.ttf') format('truetype');
}

@font-face {
  font-display: swap;
  font-family: 'Inter';
  font-style: italic;
  src: url('/fonts/Inter/Inter-Italic-VariableFont_opsz,wght.ttf') format('truetype');
}


@font-face {
  font-display: swap;
  font-family: 'Instrument';
  font-style: normal;
  src: url('/fonts/Instrument_Serif/InstrumentSerif-Regular.ttf') format('truetype');
}

@font-face {
  font-display: swap;
  font-family: 'Luxurious';
  font-style: normal;
  src: url('/fonts/Luxurious_Script/LuxuriousScript-Regular.ttf') format('truetype');
}

@font-face {
  font-display: swap;
  font-family: 'Noto Serif';
  font-style: italic;
  src: url('/fonts/Noto_Serif_Display/NotoSerifDisplay-Italic-VariableFont_wdth,wght.ttf') format('truetype');
}

@font-face {
  font-display: swap;
  font-family: 'Noto Serif';
  font-style: normal;
  src: url('/fonts/Noto_Serif_Display/NotoSerifDisplay-VariableFont_wdth,wght.ttf') format('truetype');
}

.debug {
  border: darkred;
  border-width: 3px;
}

iconify-icon {
  display: inline-block;
  width: 1em;
  height: 1em;
}

@keyframes rotation {
  0% {
    transform: rotate(0deg);
  }

  100% {
    transform: rotate(360deg);
  }
}

@keyframes marquee {
  0% {
    transform: translateX(0%);
  }

  100% {
    transform: translateX(-100%);
  }
}

